--- a/additionalTasks/lesson09/tasks/task2.html
+++ b/additionalTasks/lesson09/tasks/task2.html
@@ -81,8 +81,12 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №2.</h1>
+		<h1>Задача №2. Користувач вводить кількість елементів.Створити масив, у якому перші 5 елементів заповнені 1 - цями,
+			а інші до кінця масиву заповнені 7 - ками.</h1>
 		<script>
+			const userElem = parseInt(prompt('Введіть кількість елементів'))
+			const userArr = new Array(userElem).fill(1, 0, 5).fill(7, 5)
+			console.log(userArr);
 		</script>
 	</div>
 </body>
