--- a/additionalTasks/lesson09/tasks/task3.html
+++ b/additionalTasks/lesson09/tasks/task3.html
@@ -81,8 +81,12 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №3.</h1>
+		<h1>Задача №3. Дано масив елементів.Вивести на екран елементи, що більші за 100.</h1>
 		<script>
+			const arr = [99, 150, 1, 0, 50, 44, 999, 850, 456, 40, 15, -4, 33, 34, 100]
+			for (const num of arr) {
+				if (num > 100) document.write(`${num} <br>`)
+			}
 		</script>
 	</div>
 </body>
