--- a/additionalTasks/lesson09/tasks/task4.html
+++ b/additionalTasks/lesson09/tasks/task4.html
@@ -81,8 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №4.</h1>
+		<h1>Задача №4. Дано масив елементів.Усі елементи, які більші за перший елемент помножити на 2.</h1>
 		<script>
+			const arr = [5, 2, 3, 5, 7, 8, 9, 4, 1, 10, 15]
+			console.log(arr);
+			for (let i = 0; i < arr.length; i++) {
+				if (arr[i] > arr[0]) arr[i] *= 2
+			}
+			console.log(arr);
 		</script>
 	</div>
 </body>
