changed code according to the mentor's reccomendations

--- a/lesson08/tasks/task1.html
+++ b/lesson08/tasks/task1.html
@@ -103,8 +103,8 @@
 					if (!isNaN(custumersNumber)) {
 						arr.push(custumersNumber)
 						day++
-					} else
-						continue
+					} //else // закоментований код не потрібний
+					//continue // використовується коли потрібно пропустити наступні команди і перейти до наступної ітерації
 				}
 				return arr
 			}
