added mentor's comment

--- a/lesson09/tasks/task4.html
+++ b/lesson09/tasks/task4.html
@@ -84,6 +84,8 @@
 		<h1>Задача №4. Дано масив номерів авто. Сформувати новий масив тих, які починаються на «А»</h1>
 	</div>
 	<script>
+		// Задача 4. Ок.Це завдання можна було зробити з використанням for of. 
+		// Якщо робити по новому(з використанням методів масивів), то краще би було використати filter.Будемо це розглядати на наступному уроці   )))
 		const carLicensePlates = ['AI0101OA', 'KA1010AI', 'AA0010BA', 'CA1488BA', 'AP4102AC', 'AB1988IO']
 		const carPlatesStartsWithA = []
 		carLicensePlates.forEach(element => {
