--- a/lesson09/tasks/task4.html
+++ b/lesson09/tasks/task4.html
@@ -88,10 +88,13 @@
 		// Якщо робити по новому(з використанням методів масивів), то краще би було використати filter.Будемо це розглядати на наступному уроці   )))
 		const carLicensePlates = ['AI0101OA', 'KA1010AI', 'AA0010BA', 'CA1488BA', 'AP4102AC', 'AB1988IO']
 		const carPlatesStartsWithA = []
-		carLicensePlates.forEach(element => {
-			const arr = [...element]
-			if (arr[0] === 'A') carPlatesStartsWithA.push(element)
-		});
+		// carLicensePlates.forEach(element => {
+		// 	const arr = [...element]
+		// 	if (arr[0] === 'A') carPlatesStartsWithA.push(element)
+		// });
+		for (const plate of carLicensePlates) {
+			if (plate[0] === 'A') carPlatesStartsWithA.push(plate[0])
+		}
 		console.log(carPlatesStartsWithA);
 	</script>
 </body>
