added link for additional tasks

--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -96,7 +96,7 @@
 					імен. </a>
 			</li>
 			<li>
-				<a target="_blank" href="#">Інші задачі з уроку.</a>
+				<a target="_blank" href="../additionalTasks/lesson09/index.html">Інші задачі з уроку.</a>
 			</li>
 		</ol>
 	</div>
