--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -73,30 +73,18 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Домашні завдання (Урок 1).</h1>
+		<h1>Домашні завдання (Урок 11).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1. Користувач вводить кількість елементів. Створити масив,
-					у якому перша половина заповнена 1-цями, а друга заповнена 7-ками.</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. Знайти суми елементів у вказаній області (масиви
+					розділені на 4 рівні частини).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2. Дано масив елементів.Знайти добуток додатних
-					елементів.</a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. Дано інформацію про прибуток К магазинів протягом
+					тижня.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. Дано масив цін.Змінити цей масив так, що на ціни
-					товарів, які більші за 1000 грн.дати 30 % знижки.</a>
-			</li>
-			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. Дано масив номерів авто.Сформувати новий масив тих, які
-					починаються на «А».</a>
-			</li>
-			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. Дано масив імен. Сформувати масив з перших літер цих
-					імен. </a>
-			</li>
-			<li>
-				<a target="_blank" href="../additionalTasks/lesson09/index.html">Інші задачі з уроку.</a>
+				<a target="_blank" href="../additionalTasks/lesson11/index.html">Інші задачі з уроку.</a>
 			</li>
 		</ol>
 	</div>
