added link for 11th lesson

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson11/index.html">Домашні завдання (Урок № 10).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson10/index.html">Домашні завдання (Урок № 10).</a>
 				</li>
 				<li>
