added descr to title

--- a/lesson12/tasks/task01.html
+++ b/lesson12/tasks/task01.html
@@ -73,8 +73,10 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №.</h1>
+		<h1>Задача 1-3. Дано масив 30 випадкових цілих чисел. Підрахувати кількості обмінів під час сортування бульбашкою,
+			змішуванням та включеннями.</h1>
 		<script>
+
 		</script>
 	</div>
 </body>
