--- a/lesson12/tasks/task04.html
+++ b/lesson12/tasks/task04.html
@@ -73,8 +73,81 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №.</h1>
+		<h1>Задача №6. Дано масив імен.Застосовуючи відповідне сортування та бінарний пошук визначити, чи є у масиві ім’я
+			довжиною 5 символів і під яким індексом.</h1>
 		<script>
+			// Задача 6. Дано масив імен.Застосовуючи відповідне сортування та бінарний пошук визначити, чи є у масиві ім’я довжиною 5 символів і під яким індексом.
+			//Функція обміну елементів місцями
+			function swap(A, i, j) {
+				let temp = A[i]
+				A[i] = A[j]
+				A[j] = temp
+			}
+
+			// //Поділ фрагменту від p до q
+			// //на дві частини (<=pivot та >pivot)
+			function Partition(A, p, q) {
+				let pivot = A[q]
+				let i = p - 1
+				for (let j = p; j < q; j++) {
+					if (A[j] <= pivot) {
+						i = i + 1
+						swap(A, i, j)
+					}
+				}
+				swap(A, i + 1, q)
+				//повертаємо нову позицію pivot
+				return i + 1
+			}
+
+			//Основна функція
+			function Quicksort(A, p, q) {
+				if (p >= q) return
+				//ділимо на дві частини
+				let i = Partition(A, p, q)
+				//окремо сортуємо першу частину
+				Quicksort(A, p, i - 1)
+				//окремо сортуємо другу частину
+				Quicksort(A, i + 1, q)
+			}
+
+			//Функція бінарго пошуку
+			// функція належності елемента до масиву
+			function includes_binarySearch(arr, searchElement) {
+				let start = 0
+				let end = arr.length - 1
+				while (start <= end) {
+					const middle = Math.floor((start + end) / 2)
+					if (arr[middle] === searchElement) return true
+					if (arr[middle] < searchElement) start = middle + 1
+					if (arr[middle] > searchElement) end = middle - 1
+				}
+				return false
+			}
+			// функція знаходження елемента у масиві
+			function findIndex_binarySearch(arr, searchElement) {
+				let start = 0
+				let end = arr.length - 1
+				while (start <= end) {
+					const middle = Math.floor((start + end) / 2)
+					if (arr[middle] === searchElement) return middle
+					if (arr[middle] < searchElement) start = middle + 1
+					if (arr[middle] > searchElement) end = middle - 1
+				}
+				return -1
+			}
+			//- масив імен
+			let names = ['Paul', 'Tom', 'Geralt', 'Cirilla', 'Pandora', 'Hendalf', 'Nazgul', 'Olga', 'Enakin', 'Leia', 'Padme', 'Matthew', 'Darth Mol', 'Sam', 'Lolita', 'Lionel', 'Valentuna']
+
+			// отриманння масиву довжини імен 
+			let namesLength = names.map(el => el.length)
+			// сортування 
+			Quicksort(namesLength, 0, namesLength.length - 1)
+			// Знаайти бінарним пошуком індекс довжини імені, що дрівнює 5
+			let searchNameLength = findIndex_binarySearch(namesLength, 5)
+			if (searchNameLength && searchNameLength !== -1)
+				alert(`В масиві є мі'я з довжиною 5 символів під індексом ${searchNameLength}`)
+			else alert('Імені з такою довжиною в масиві немає')
 		</script>
 	</div>
 </body>
